# knots

./: Cargo.toml  README.md
diagrams/: kinoshita_terasaka.csv  legendrian.csv
shaders/: draw.frag  draw.vert
src/: constants.rs  diagram.rs  knot.rs  main.rs  mesh.rs  polyline.rs  program.rs  renderer.rs  system.rs  tangle.rs  utils.rs
src/example_diagrams/: legendrian_1.csv  trefoil.csv
src/graphics/: mesh.rs  mod.rs  polyline.rs  program.rs
