[package]
name = "knots"
version = "0.1.0"
authors = ["mwalczyk <mwalczyk2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.13.0"
glutin = "0.10.1"
cgmath = "0.17.0"
csv = "1.1.1"
noise = "0.5.1"
rand = "0.7.0"
image = "0.18.0"

graphics_utils = { git = "https://github.com/mwalczyk/graphics_utils" }

